[ch2] install dependencies and set up files

--- a/.babelrc
+++ b/.babelrc
@@ -16,6 +16,9 @@
           "@babel/preset-env",
           { "targets": { "node": "current" } }
         ]
+      ],
+      "plugins": [
+        "transform-object-rest-spread"
       ]
     }
   }
